Changed font color in the titlepage when the default blue background is being used.

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -8,6 +8,7 @@
       %university diploma thesis'
     		\colorbox{thesisblue}{%
      			\begin{minipage}[c][22,1cm][c]{18.67cm}
+            \color{white}
 						\vspace*{8cm}
   					\begin{center}
             \begin{tabular}{l}
@@ -42,6 +43,7 @@
 						}\\
           \end{tabular}
           \end{center}
+          \color{black}
       		\end{minipage}
     		}\\
 		\includegraphics[width=10cm]{Pictures/miun_logo.png}
