Made the instructions clearer for what needs to be changed, depending on type of thesis.

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -4,11 +4,16 @@
 	\addtolength{\voffset}{-2.7cm}
   \newgeometry{margin=1cm}
     \begin{tabular}{@{}c@{}}
-      %Use 'thesisyellow' for master thesis and 'thesisblue' for bachelor and
-      %university diploma thesis'
+      % For master thesis use the following color schemes:
+      %  \colorbox{thesisyellow} 
+      %  \color{black} 
+      % For university diploma and bachelor thesis use the following color
+      % schemes:
+      % \colorbox{thesisblue} 
+      % \color{white}
     		\colorbox{thesisblue}{%
+        \color{white}
      			\begin{minipage}[c][22,1cm][c]{18.67cm}
-            \color{white}
 						\vspace*{8cm}
   					\begin{center}
             \begin{tabular}{l}
@@ -43,8 +48,8 @@
 						}\\
           \end{tabular}
           \end{center}
-          \color{black}
       		\end{minipage}
+          \color{black}
     		}\\
 		\includegraphics[width=10cm]{Pictures/miun_logo.png}
   \end{tabular}
