Changed from color to textcolor, to keep same style of formatting.

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,19 +6,19 @@
     \begin{tabular}{@{}c@{}}
       % For master thesis use the following color schemes:
       %  \colorbox{thesisyellow} 
-      %  \color{black} 
+      %  \textcolor{black} 
       % For university diploma and bachelor thesis use the following color
       % schemes:
       % \colorbox{thesisblue} 
-      % \color{white}
+      % \textcolor{white}
     		\colorbox{thesisblue}{%
-        \color{white}
+        \textcolor{white}{%
      			\begin{minipage}[c][22,1cm][c]{18.67cm}
 						\vspace*{8cm}
   					\begin{center}
             \begin{tabular}{l}
             {\fontfamily{phv}\selectfont{%
-							\LARGE{\textbf{Independent degree project -- second cycle}}}
+							\LARGE{\textbf{Independent degree project --- second cycle}}}
 						}\\
             \\
             {\fontfamily{phv}\selectfont{%
@@ -49,8 +49,9 @@
           \end{tabular}
           \end{center}
       		\end{minipage}
-          \color{black}
-    		}\\
+        } % End textcolor
+    		} % End colorbox
+        \\
 		\includegraphics[width=10cm]{Pictures/miun_logo.png}
   \end{tabular}
     \newpage
