--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, titlepage,12pt]{article}
-\usepackage[margin=3.7cm]{geometry}
+\usepackage[margin=35mm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[swedish,english]{babel}
@@ -8,12 +8,13 @@
 \usepackage{amsmath,amssymb,amsthm, amsfonts}
 \usepackage[backend=biber,citestyle=ieee, backref]{biblatex}
 \usepackage{algorithm}
+\usepackage{setspace}
 \usepackage{parskip}
 \usepackage{float}
 \usepackage{newfloat}
 \usepackage{varioref, prettyref}
 \usepackage{hyperref, cleveref}
-\usepackage{fancyheadings}
+\usepackage{fancyhdr}
 \usepackage{multicol}
 \usepackage{tocloft}
 \usepackage[]{appendix}
@@ -64,6 +65,7 @@
   \fontfamily{ppl}
   \pagestyle{fancy}
   \fancyhf{}
+  \renewcommand{\headrulewidth}{0pt}
   \fancyhead[LH]{Main Title \\ Author}
   \fancyhead[RH]{\today}
   \fancyfoot[C]{\thepage}
