--- a/thesis.tex
+++ b/thesis.tex
@@ -117,5 +117,5 @@
   \appendix
   \noappendicestocpagenum
   \setcounter{page}{1}
-  \include{appendices/taxonomies}
+  \include{Appendices/taxonomies}
 \end{document}
