Included instructions for abstract, taken from the old template.

--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -1,6 +1,16 @@
 \section*{Abstract}\label{sec:abstract}
 \phantomsection{}
 \addcontentsline{toc}{section}{Abstract}
-Abstract
+The abstract acts as a description of the reports contents. This allows for the
+possibility to have a quick review of the report and provides an overview of the
+whole report, i.e.\ contains everything from the objectives and methods to the
+results and conclusions. Examples: “The objective of this study has been to
+answer the question…. The study has been conducted with the aid of…. The study
+has shown that…” Do not mention anything that is not covered in the report. An
+abstract is written as one piece and the recommended length is 200 --- 250 words.
+References to the report's text, sources or appendices are not allowed; the
+abstract should “stand on its own”. Only use plain text, with no characters in
+italic or boldface, and no mathematical formulas. The abstract can be completed
+by the inclusion of keywords; this can ease the search for the report in the
+library databases.
 \textbf{Keywords:} LaTeX 
-
