--- a/00-acknowledgements.tex
+++ b/00-acknowledgements.tex
@@ -1,3 +1,8 @@
 \section*{Acknowledgements}\label{sec:acknowledgements}
 \phantomsection
-\addcontentsline{toc}{section}{Acknowledgements}
+\addcontentsline{toc}{section}{Acknowledgements} 
+Acknowledgements or Foreword (choose one of the heading alternatives) are not
+mandatory but can be applied if you as the writer wish to provide general
+information about your exam work or project work, educational programme,
+institution, business, tutors and personal comments, i.e. thanks to any persons
+that may have helped you. Acknowledgements are to be placed on a separate page.
