--- a/00-terminology.tex
+++ b/00-terminology.tex
@@ -1,6 +1,12 @@
 \section*{Terminology}\label{sec:terminology}
 \phantomsection
-\addcontentsline{toc}{section}{Terminology}
+\addcontentsline{toc}{section}{Terminology / Notation}
+(Choose one of the headline alternatives.) 
+A possible list of terms, abbreviations and variable names with brief
+explanations may be placed after the table of contents, but is not required.
+Note that although a term is explained in the list of terms, it should also be
+explained in the chapter text where it is used the first time.
+
 \begin{table}[ht!]
   \begin{tabular}{l l}
 DL & Description Logic\\
