Included figure used for theory instruction, also added booktabs package

--- a/thesis.tex
+++ b/thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath,amssymb,amsthm, amsfonts}
 \usepackage[backend=biber,citestyle=ieee, backref]{biblatex}
 \usepackage{algorithm}
+\usepackage{booktabs}
 \usepackage{setspace}
 \usepackage{parskip}
 \usepackage{float}
