--- a/05-result.tex
+++ b/05-result.tex
@@ -1,2 +1,17 @@
 \section{Result}\label{sec:result}
+The results chapter is included when you have produced a systematic study, 
+i.e.\ an evaluation of a program that you have developed, which is required for
+C- and AV-level diploma work. In the results chapter objective results of the
+empirical study are presented. Keep in mind that possible comments in this
+chapter should only be used for clarification. Your own views and subjective
+(personal) comments belong in the chapter conclusion/discussion.
+
+Strive to present the results, for example measurement-, calculations- and/or
+the simulation result, in a form that is as lucid and easily understandable as
+possible. The results are preferably presented in diagrams or tables. Accounts
+of interviews can be summarised, but may include concrete examples supporting
+your work.
+
+Extensive results, for example complete summaries of survey results, large
+tables and long mathematical deductions, are placed in the appendices.
 
