Included instructions for discussion, taken from the old template.

--- a/06-discussion.tex
+++ b/06-discussion.tex
@@ -1,1 +1,35 @@
-\section{Evaluation}
+\section{Discussion / Conclusion}\label{sec:conclusion}
+The conclusion/discussion (choose a heading) is a separate chapter in which the
+results are analysed and critically assessed. At this point your own
+conclusions, your subjective view, and explanations of the results are
+presented.
+
+If this chapter is extensive it can be divided up into more chapters or
+sub-chapters i.e.\ one analysis or discussion chapter with explanations of and
+critical assessment of the results, a concluding chapter where the most
+important results and well supported conclusions are discussed and to sum it up
+a chapter with suggestions for further research in the same area.
+
+In this chapter it is of vital importance that a connection back to the aim of
+the survey is made and thus the purpose is pointed out in a summary and analysis
+of the results.  In this chapter you should also include answers to the
+following questions: What is the project's news value and its most vital
+contribution to the research or technology development? Have the project’s goals
+been achieved? Has the task been accomplished? What is the answer to the opening
+problem formula? Was the result as expected? Are the conclusions general, or do
+they only apply during certain conditions? Discuss the importance of the choice
+of method and model for the results. Have new questions arisen due to the
+result?
+
+The last question invites the possibility to offer proposals to others relevant
+research, i.e.\ proposal points for measures and recommendations, points for
+continued research or development for those wishing to build upon your work.
+
+In technical reports on behalf of companies, the recommended solution to a
+problem is presented at this stage and it is possible to offer a consequence
+analysis of the solution from both a technical and layman perspective, for
+example regarding environment, economy and changed work procedures. The chapter
+then contains recommended measures and proposals for further development or
+research, and thus to function as a basis for decision-making for the employer
+or client.
+
