Wrote a custom class miunthesis that handles most of the formatting Included the translator package to make it easy to change between swedish and english Automatically generate Semester and Year

--- a/00-acknowledgements.tex
+++ b/00-acknowledgements.tex
@@ -1,6 +1,6 @@
-\section*{Acknowledgements}\label{sec:acknowledgements}
+\section*{\translate{Acknowledgements}}\label{sec:acknowledgements}
 \phantomsection
-\addcontentsline{toc}{section}{Acknowledgements} 
+\addcontentsline{toc}{section}{\translate{Acknowledgements}} 
 Acknowledgements or Foreword (choose one of the heading alternatives) are not
 mandatory but can be applied if you as the writer wish to provide general
 information about your exam work or project work, educational programme,
