--- a/00-terminology.tex
+++ b/00-terminology.tex
@@ -1,4 +1,4 @@
-\section*{Terminology}\label{sec:terminology}
+\section*{\translate{Terminology}}\label{sec:terminology}
 \phantomsection
 \addcontentsline{toc}{section}{Terminology / Notation}
 (Choose one of the headline alternatives.) 
