--- a/01-intro.tex
+++ b/01-intro.tex
@@ -1,4 +1,4 @@
-\section{Introduction}\label{sec:intro}
+\section{\translate{Introduction}}\label{sec:intro}
 During your previous education, you have probably come across relatively well
 defined problem types as formulated by teachers, textbooks and teaching aids.
 During project courses and exam work you are required to do a great deal of the
@@ -20,7 +20,7 @@ read the report's summary, introduction and conclusions, since these sections
 are usually written without the inclusion of highly technical and mathematical
 details.
 
-\subsection{Background and problem motivation}\label{subsec:background}
+\subsection{\translate{Background and problem motivation}}\label{subsec:background}
 \noindent 
 In this sub-chapter you should try to quickly engage the readers' interest in
 the problem area you have chosen to examine. Demonstrate that you are not only
@@ -42,7 +42,7 @@ growing demand on the market after\dots''.
 A technical report that is carried out on behalf of a company could start with:
 “Within the organization there is an increased need for\dots and at the same time
 
-\subsection{Overall aim}\label{subsec:aim}
+\subsection{\translate{Overall aim}}\label{subsec:aim}
 \noindent
 The project's aim is an insightful description of the direction in which you
 want to work, your hopes with regards to the possible outcomes of the project,
@@ -61,14 +61,14 @@ needs of C.'' ``The project aims to present a decision-making basis for\dots''
 ``The project aims to investigate whether or not it is realistic to expect that
 technology A could be used for purpose B in the future.''
 
-\subsection{Scope}\label{subsec:scope}
+\subsection{\translate{Scope}}\label{subsec:scope}
 \noindent
 Examples: ``The study has its focus on\dots. In the survey, the effect of parameter Z
 is ignored, because…. The survey is distinguished by the evaluation of cases F1
 and F2\dots. The survey's conclusions should however be generally valid for
 every\dots.''
 
-\subsection{Concrete and verifiable goals}\label{subsec:goals}
+\subsection{\translate{Concrete and verifiable goals}}\label{subsec:goals}
 \noindent
 The problem- or objective statement is a verification of the proposed formula
 you will use to reach your objective. The questions that are specified should be
@@ -96,11 +96,11 @@ criteria and to evaluate the proposal with respect to performance measure Y.''
 All technical details are reserved for the structure chapter's technical
 requirement specifications.
 
-\subsection{Outline}\label{subsec:outline}
+\subsection{\translate{Outline}}\label{subsec:outline}
 \noindent
 Briefly describe the report's outline. ``Chapter 2 describes\dots''
 
-\subsection{Contributions}\label{subsec:contributions}
+\subsection{\translate{Contributions}}\label{subsec:contributions}
 \noindent 
 Describe which parts of the work that you have conducted yourself, and which
 parts that you had help with i.e.\ carried out by colleagues. If the work is
