--- a/02-theory.tex
+++ b/02-theory.tex
@@ -1,4 +1,4 @@
-\section{Theory}\label{sec:theory} 
+\section{\translate{Theory}}\label{sec:theory} 
 In the report's theory study, sometimes called Related work, there may be
 additional facts required for the reader's understanding of the report. At this
 point a summary of background material in the area should be provided, i.e.\
