--- a/03-method.tex
+++ b/03-method.tex
@@ -1,4 +1,4 @@
-\section{Method}\label{sec:method}
+\section{\translate{Method}}\label{sec:method}
 With regards to C- and AV-level diploma work, it is insufficient to merely
 perform a practical construction or programming project. A systematic study must
 also be carried out, e.g.\ an evaluation and analysis of the design or program.
