--- a/04-construction.tex
+++ b/04-construction.tex
@@ -1,4 +1,4 @@
-\section{Construction}\label{sec:construction}
+\section{\translate{Construction}}\label{sec:construction}
 The Design or Construction chapter often appears in technical reports, but not
 always in scientific reports. Here, the analysis of the problem is implemented
 and a technical requirement specification is formulated. At this stage, the most
