--- a/05-result.tex
+++ b/05-result.tex
@@ -1,4 +1,4 @@
-\section{Result}\label{sec:result}
+\section{\translate{Result}}\label{sec:result}
 The results chapter is included when you have produced a systematic study, 
 i.e.\ an evaluation of a program that you have developed, which is required for
 C- and AV-level diploma work. In the results chapter objective results of the
