--- a/06-discussion.tex
+++ b/06-discussion.tex
@@ -1,4 +1,4 @@
-\section{Discussion / Conclusion}\label{sec:conclusion}
+\section{\translate{Discussion} / \translate{Conclusion}}\label{sec:conclusion}
 The conclusion/discussion (choose a heading) is a separate chapter in which the
 results are analysed and critically assessed. At this point your own
 conclusions, your subjective view, and explanations of the results are
