Cleaned up margins, fixed some floats

--- a/02-theory.tex
+++ b/02-theory.tex
@@ -94,7 +94,7 @@ All illustration (pictures, characters, diagrams, tables) in the report should
 be numbered and accompanied by a short text description. In addition to the text
 the illustration source reference should be stated, if it is not your own.
 Example:
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics{Pictures/Latex_figure1.eps}
     \caption{System overview}\label{fig:figure1}
@@ -112,7 +112,7 @@ Table 1 shows a example of a table. The table numbering behaves like the Figure
 numbering. Note that the table cation is above the table. 
 Table~\ref{table:methodmeasure}: Method timing measurements.
 
-\begin{table}[h!]
+\begin{table}[ht!]
 \centering
 \caption{Method timing measurements.}\label{table:methodmeasure}
 \begin{tabular}{c c c c}
